# GFLinalg

./: .clang-format  .travis.yml  CMakeLists.txt  GFlinalg.h  GFtest1.cpp  LICENSE  README.md
documentation/html/: _g_f_s_plinalg_8hpp_source.html  _g_f_t_plinalg_8hpp_source.html  _g_fbase_8hpp_source.html  annotated.html  annotated_dup.js  class_g_flinalg_1_1_basic_bin_polynomial-members.html  class_g_flinalg_1_1_basic_bin_polynomial.html  class_g_flinalg_1_1_basic_bin_polynomial.js  class_g_flinalg_1_1_basic_g_f_elem-members.html  class_g_flinalg_1_1_basic_g_f_elem.html  class_g_flinalg_1_1_basic_g_f_elem.js  class_g_flinalg_1_1_pow_bin_polynomial-members.html  class_g_flinalg_1_1_pow_bin_polynomial.html  class_g_flinalg_1_1_pow_bin_polynomial.js  class_g_flinalg_1_1_pow_g_f_elem-members.html  class_g_flinalg_1_1_pow_g_f_elem.html  class_g_flinalg_1_1_pow_g_f_elem.js  class_g_flinalg_1_1_table_bin_polynomial-members.html  class_g_flinalg_1_1_table_bin_polynomial.html  class_g_flinalg_1_1_table_bin_polynomial.js  class_g_flinalg_1_1_table_g_f_elem-members.html  class_g_flinalg_1_1_table_g_f_elem.html  class_g_flinalg_1_1_table_g_f_elem.js  classes.html  dir_23e9c35f5415eca93837439a2cb0e3f3.html  dir_23e9c35f5415eca93837439a2cb0e3f3.js  dir_c052ae05ff6cb0927b08643f9fa9f6eb.html  dir_c052ae05ff6cb0927b08643f9fa9f6eb.js  doxygen.css  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  (+13 more)
include/: GFSPlinalg.hpp  GFStorage.h  GFTPlinalg.hpp  GFbase.hpp  GFlinalg.h  GFlinalg.hpp
tests/: CMakeLists.txt  GFStorageTest.cpp  GFbenchmark1.cc  GFtest1.cpp
(+45 files in other folders)
